--- a/style.css
+++ b/style.css
@@ -34,21 +34,21 @@ h3 {
 
 /* Stylizacja dla głównych sekcji projektów */
 .project-category1{
-	background-color: #f7dc6f;
+	background-color: #6AD1E3;
     border: 2px solid #ccc;
     border-radius: 10px;
     margin: 20px 10px;
     padding: 20px;
 }
 .project-category2{
-	background-color: #e59866;
+	background-color: #A4D65E;
     border: 2px solid #ccc;
     border-radius: 10px;
     margin: 20px 10px;
     padding: 20px;
 }
 .project-category3{
-	background-color: #f1948a;
+	background-color: #FFB25B;
     border: 2px solid #ccc;
     border-radius: 10px;
     margin: 20px 10px;
@@ -159,3 +159,7 @@ h3 {
     background-color: #4f81bd;
     color: #fff;
 }
+
+
+
+----------------------------------------------------------------------------
