--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,13 @@ header {
     background-color: #35637c;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 5px 0;
     position: relative;
+}
+
+header h1 {
+	font-style: italic;
+	font-weight: bold;
 }
 
 .footer {
