--- a/style.css
+++ b/style.css
@@ -32,6 +32,53 @@ h3 {
     cursor: pointer; /* Kursor zmienia się na wskaźnik */
 }
 
+----------------------------------------------------------------------------
+
+.contact-icon {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000; /* Wyświetla się nad innymi elementami */
+}
+
+
+/* Menu kontaktowe */
+.contact-menu {
+    position: fixed;
+    top: 20px; /* Umieszczone 60px od góry, poniżej ikony */
+    right: 20px;
+    background-color: #fff;
+    color: #35637c;
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: block; /* Domyślnie niewidoczne */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 1000; /* Wyświetla się nad innymi elementami */
+}
+
+.contact-menu a {
+    color: #007BFF;
+    text-decoration: none;
+    display: block;
+    margin: 5px 0;
+}
+
+.contact-menu a:hover {
+    text-decoration: underline;
+}
+
+----------------------------------------------------------------------------
+
 /* Stylizacja dla głównych sekcji projektów */
 .project-category{
 	background-color: #eee;
@@ -154,3 +201,5 @@ padding: 10px;
 bottom: 0;
 }
 ----------------------------------------------------------------------------
+
+
